Fixed header z-index

--- a/app/less/header.less
+++ b/app/less/header.less
@@ -31,6 +31,7 @@ body.with-menu {
     top: 0;
     right: 0;
     width: calc(~"100% - "@menu-width);
+    z-index: 2;
   }
 }
 
